--- a/comms/bluegps/Makefile
+++ b/comms/bluegps/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=    comms
 MASTER_SITES=  http://www.harbaum.org/till/bluegps/
 EXTRACT_SUFX=  .tgz
 
-MAINTAINER=    dirkx@joost.com
+MAINTAINER=    dirkx@webweaving.org
 COMMENT=       Command line tool to download datalogs from the Royaltek RBT-3000 bluetooth GPS receiver
 
 MAN1=          bluegps.1
