--- a/comms/bluez-firmware/Makefile
+++ b/comms/bluez-firmware/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	1.2
 CATEGORIES=	comms kld
 MASTER_SITES=	http://bluez.sourceforge.net/download/
 
-MAINTAINER=	dirkx@joost.com
+MAINTAINER=	dirkx@webweaving.org
 COMMENT=	Firmware for the D-Link BCM2033 bluetooth adaptor for use by bcmfw(1)
 
 GNU_CONFIGURE=	yes
