--- a/devel/p5-DateTime/Makefile
+++ b/devel/p5-DateTime/Makefile
@@ -6,7 +6,8 @@
 #
 
 PORTNAME=	DateTime
-PORTVERSION=	0.42
+PORTVERSION=	0.43.02
+DISTVERSION=	${PORTVERSION:C/\.(..)$/\1/}
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
