--- a/devel/pear/Makefile
+++ b/devel/pear/Makefile
@@ -6,11 +6,9 @@
 #
 
 PORTNAME=	pear
-PORTVERSION=	1.7.1
+PORTVERSION=	1.7.2
 CATEGORIES=	devel
-MASTER_SITES=	http://freebsd.unixfreunde.de/sources/ \
-		${MASTER_SITE_LOCAL}
-MASTER_SITE_SUBDIR=	miwi
+MASTER_SITES=	http://freebsd.unixfreunde.de/sources/
 
 MAINTAINER=	miwi@FreeBSD.org
 COMMENT=	PEAR framework for PHP
