--- a/archivers/dact/Makefile
+++ b/archivers/dact/Makefile
@@ -8,6 +8,7 @@
 
 PORTNAME=	dact
 PORTVERSION=	0.8.41
+PORTREVISION=	1
 CATEGORIES=	archivers
 MASTER_SITES=	http://www.rkeene.org/files/oss/dact/release/
 
@@ -23,23 +24,24 @@ CONFIGURE_TARGET=	--build=${MACHINE_ARCH}-portbld-freebsd${OSREL} \
 			--libdir=${PREFIX}/lib
 CONFIGURE_ENV=	CPPFLAGS="${CXXFLAGS} -I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib"
-MAKE_ARGS=	CONF=${EXAMPLESDIR}/dact.conf \
-		TOBUILD="dact libdact.so dact.conf"
+MAKE_ARGS=	TOBUILD="dact libdact.so dact.conf"
 
 MAN1=		dact.1
 USE_LDCONFIG=	yes
 
 post-patch:
 	@${REINPLACE_CMD} -e "s|prefix = @prefix@|prefix = ${PREFIX}|" \
-			-e "s|libdir = @libdir@|libdir = ${PREFIX}/lib|" \
-			${WRKSRC}/Makefile.in
+	-e "s|libdir = @libdir@|libdir = ${PREFIX}/lib|" \
+		${WRKSRC}/Makefile.in
 
 pre-install:
-	@${MKDIR} ${EXAMPLESDIR}
 	@${RM} -f ${WRKSRC}/libdact.a
 
 post-install:
-	@${CP} -n ${EXAMPLESDIR}/dact.conf ${PREFIX}/etc
+.if !defined(NOPORTEXAMPLES)
+	@${MKDIR} ${EXAMPLESDIR}
+	${CP} -n ${WRKSRC}/dact.conf ${EXAMPLESDIR}
+.endif
 .if !defined(NOPORTDOCS)
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/Docs/dact.txt ${DOCSDIR}
