UDNS is a stub DNS resolver library with ability to perform both synchronous and asynchronous DNS queries.
WWW: http://www.corpit.ru/mjt/udns.html

--- a/dns/Makefile
+++ b/dns/Makefile
@@ -121,6 +121,7 @@
     SUBDIR += staticcharge
     SUBDIR += tinystats
     SUBDIR += totd
+    SUBDIR += udns
     SUBDIR += unbound
     SUBDIR += updatedd
     SUBDIR += vizone
