[new port] games/netherearth
	new port of Nether Eearth Re-Make
	(http://www.braingames.getput.com/nether/)
	Nether Earth was the very first real time strategy game.
	It worked on a SPECTRUM machine, and only needed 48KB of
	RAM to work!! It has all the tipical elements of strategy
	games: resources, factories, combat units, etc.  supposed
	name of ports: netherearth

	NETHER EARTH REMAKE. Nether Earth was the very first real
	time strategy game. It worked on a SPECTRUM machine, and
	only needed 48KB of RAM to work!!

	It has all the tipical elements of strategy games: resources,
	factories, combat units, etc.

	WWW: http://www.braingames.getput.com/nether/default.asp

	- OleVole
	olevole@yandex.ru

PR:		ports/123800
Submitted by:	OleVole <olevole@yandex.ru>

--- a/games/Makefile
+++ b/games/Makefile
@@ -509,6 +509,7 @@
     SUBDIR += nethack34-gnome
     SUBDIR += nethack34-nox11
     SUBDIR += nethack34-qt
+    SUBDIR += netherearth
     SUBDIR += netpanzer
     SUBDIR += netpanzer-data
     SUBDIR += netrek-BRMH-bin
