net/mDNSResponder and net/avahi-libdns install files in the same place
	net/mDNSResponder and net/avahi-libdns install files in the
	same place.

	/usr/ports/net/mDNSResponder/Makefile contains CONFLICTS=
	avahi+libdns-[0-9]*, but the package name is avahi-libdns-0.6.22.
	/usr/ports/net/avahi-libdns/Makefile does not contain any
	CONFLICTS section.

PR:		ports/121434
Submitted by:	Anatoly Borodin <anatoly.borodin@gmail.com>
Approved by:	various maintainer timeouts

--- a/net/avahi-libdns/Makefile
+++ b/net/avahi-libdns/Makefile
@@ -23,4 +23,6 @@ PLIST=		${.CURDIR}/pkg-plist
 AVAHI_SLAVE=	libdns
 AVAHI_PKGCONFIG=avahi-compat-libdns_sd.pc
 
+CONFLICTS=	mDNSResponder-[0-9]*
+
 .include "${MASTERDIR}/Makefile"
