--- a/net/mDNSResponder/Makefile
+++ b/net/mDNSResponder/Makefile
@@ -33,7 +33,7 @@ EXTRAMAN8=	dnsextd.8 mDNSResponderPosix.8
 
 MAN8=		mdnsd.8 ${EXTRAMAN8}
 
-CONFLICTS=	avahi+libdns-[0-9]*
+CONFLICTS=	avahi-libdns-[0-9]*
 
 .include <bsd.port.pre.mk>
 
