Update to 1.1.24. As for the py-libxslt, get it able to find Python correct when PREFIX is set other than LOCALBASE and will allowing the modules to build.

--- a/textproc/libxslt/Makefile
+++ b/textproc/libxslt/Makefile
@@ -6,11 +6,12 @@
 #
 
 PORTNAME=	libxslt
-PORTVERSION=	1.1.22
-PORTREVISION?=	1
+PORTVERSION=	1.1.24
+PORTREVISION?=	0
 CATEGORIES?=	textproc gnome
-MASTER_SITES=	GNOME \
-		ftp://fr.rpmfind.net/pub/libxml/
+MASTER_SITES=	ftp://fr.rpmfind.net/pub/libxml/ \
+		ftp://gd.tuwien.ac.at/pub/libxml/ \
+		ftp://xmlsoft.org/libxml2/
 DIST_SUBDIR=	gnome2
 
 MAINTAINER?=	gnome@FreeBSD.org
