New port: devel/asdlgen generate serializers for C,C++,Haskell,Icon,Java,ML
	asdlGen generates data structure and serializer code from ASDL
	specifications [1]. It is especially helpful for exchanging
	tree like data structures between different programming languages.
	Currently C, C++, Haskell, Java, Icon, OCaml and SML are supported.
	Although the asdlGen project itself seems no longer actively
	maintained, ASDL is "alive" as it is used (at least) in the
	Moby [2] and Python [3,4] compilers.

	The port optionally installs a simple usage example [5] for all
	seven programming languages. I developed it primarily to test the
	port, but it could be helpful to users of asdlGen to get a quicker
	start, especially if a less familiar programming language is
	involved in their project. Reviewers/committers can easily make
	use of it via the "test-demo" target.

PR:		ports/117703
Submitted by:	Johannes 5 Joemann <joemann@beefree.free.de>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -53,6 +53,7 @@
     SUBDIR += arm-rtems-objc
     SUBDIR += aros-sdk
     SUBDIR += as31
+    SUBDIR += asdlgen
     SUBDIR += asis
     SUBDIR += asis-gpl
     SUBDIR += asl
