[NEW PORT] graphics/2d-rewriter: Fractals generator based on pattern matching and rewriting
	2d-rewriter is fractals generator based on pattern matching
	and rewriting. The program takes input containing initial
	object placement and rewriting rules and keeps applying
	rules to the data field until it reaches an arrangement
	where no rules can be applied.

PR:		ports/118906
Submitted by:	Igor Serikov <bt@turtle.freedns.us>

--- a/science/Makefile
+++ b/science/Makefile
@@ -3,6 +3,7 @@
 
     COMMENT = Scientific ports
 
+    SUBDIR += 2d-rewriter
     SUBDIR += 2dhf
     SUBDIR += InsightToolkit
     SUBDIR += abinit
