--- a/www/cacheboy/Makefile
+++ b/www/cacheboy/Makefile
@@ -75,13 +75,13 @@
 #     Enable experimental multicast notification of cachemisses.
 
 PORTNAME=	cacheboy
-DISTVERSION=	0.PRE6
-PORTREVISION=	4
+DISTVERSION=	1.0
+PORTREVISION=	5
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GOOGLE_CODE}
-DISTNAME=	CACHEBOY_0.PRE6
+DISTNAME=	CACHEBOY_1.0
 # EXTRACT_SUFX=	.tar.gz
-DIST_SUBDIR=	CACHEBOY_0.PRE6
+DIST_SUBDIR=	CACHEBOY_1.0
 
 MAINTAINER=	adrian@freebsd.org
 COMMENT=	HTTP Caching Proxy (Squid Derivative)
