Add wmanager-addons-0.02, a set of helper scripts and manual pages for x11-wm/wmanager - the X window manager selector.  The scripts and manpages were obtained from the Debian wmanager package and reworked a bit so that they work on other operating systems, too.
WWW:	http://devel.ringlet.net/x11/wmanager-addons/
Author:	Peter Pentchev <roam@ringlet.net> (myself)

--- a/x11-wm/Makefile
+++ b/x11-wm/Makefile
@@ -134,6 +134,7 @@
     SUBDIR += wm2
     SUBDIR += wmakerconf
     SUBDIR += wmanager
+    SUBDIR += wmanager-addons
     SUBDIR += wmconfig
     SUBDIR += wmcp
     SUBDIR += wmg
