Add two patches for stricter C++ compliance taken from the Debian package of wmanager. Add an optional (on by default) dependency on the wmanager-addons port containing two helper scripts and some manual pages. Fix the path to the docs in pkg-message and add a reference to the sample files' directory.  This still leaves a portlint warning about absolute paths which will be fixed after the repo-copy in PR 123864. Add a Makefile patch that I also added to the Debian package to make wmanager build in the same way on all OS's.

--- a/x11-wm/wmanager/Makefile
+++ b/x11-wm/wmanager/Makefile
@@ -26,6 +26,14 @@ MAKE_ENV=	CXX="${CXX}" \
 		PTHREAD_CFLAGS="${PTHREAD_CFLAGS}" \
 		PTHREAD_LIBS="${PTHREAD_LIBS}"
 
+OPTIONS=	ADDONS "Install the helper scripts and manpages" on
+
+.include <bsd.port.pre.mk>
+
+.if defined(WITH_ADDONS)
+RUN_DEPENDS+=	wmanager-loop:${PORTSDIR}/x11-wm/wmanager-addons
+.endif
+
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/wmanager ${PREFIX}/bin
 .if !defined(NOPORTDOCS)
@@ -38,4 +46,4 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/.xinitrc ${EXAMPLESDIR}/xinitrc_sample
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
