--- a/x11-wm/wmanager/files/pkg-message.in
+++ b/x11-wm/wmanager/files/pkg-message.in
@@ -1,3 +1,4 @@
-Docs have been installed in /usr/X11R6/share/wmanager/.
+Documentation has been installed in /usr/local/share/doc/wmanager/ and
+example files in /usr/local/share/examples/wmanager/
 You are advised to have a look at the sample .wmanagerrc
-and .xinitrc's available there.
+and .xinitrc files available there.
