--- a/astro/libgal/Makefile
+++ b/astro/libgal/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	libgal
-PORTVERSION=	0.1.0
+PORTVERSION=	0.2.0
 CATEGORIES=	astro hamradio
 MASTER_SITES=	http://homepage.mac.com/pclwillmott/GAL/ \
 		${MASTER_SITE_LOCAL}
@@ -17,7 +17,8 @@ COMMENT=	General Astrodynamics Library
 
 GNU_CONFIGURE=	yes
 CONFIGURE_TARGET=	--build=${ARCH}-portbld-freebsd${OSREL}
-CONFIGURE_ARGS=	--prefix=${PREFIX} --sysconfdir=${PREFIX}
+CONFIGURE_ARGS=	--prefix=${PREFIX} --sysconfdir=${PREFIX} --enable-shared=yes
 USE_LDCONFIG=	yes
+USE_DOS2UNIX=	yes
 
 .include <bsd.port.mk>
