--- a/devel/Makefile
+++ b/devel/Makefile
@@ -987,6 +987,7 @@
     SUBDIR += p5-Class-Container
     SUBDIR += p5-Class-Contract
     SUBDIR += p5-Class-Data-Accessor
+    SUBDIR += p5-Class-Data-ConfigHash
     SUBDIR += p5-Class-Data-Inheritable
     SUBDIR += p5-Class-Date
     SUBDIR += p5-Class-Default
