Vega Strike data files
This port install the data files needed to run Vega Strike opensource
3D space simulator

WWW: http://vegastrike.sourceforge.net

PR:		ports/123537
Submitted by:	Dmitry Marakasov <amdmi3 at amdmi3.ru>

--- a/games/Makefile
+++ b/games/Makefile
@@ -834,6 +834,7 @@
     SUBDIR += vdrift
     SUBDIR += vdrift-data
     SUBDIR += vectoroids
+    SUBDIR += vegastrike-data
     SUBDIR += viruskiller
     SUBDIR += volleyball
     SUBDIR += vor
